--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="css.css" rel="stylesheet" type="text/css">
     <script defer src="js/vue.js"></script>
     <script defer src="js/main.js"></script>
     <title>Product App</title>
@@ -12,6 +13,7 @@
 <body>
 <div id="app">
     <h1>{{ product }}</h1>
+    <p>{{ description }}</p>
 </div>
 </body>
 </html>
