--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 </head>
 <body>
 <div id="app">
-    <h1>{{ product }}</h1>
-    <p>{{ description }}</p>
+    <div class="product">
+        <div class="product-image">
+            <img :alt="altText" :src="image"/>
+        </div>
+        <div class="product-info">
+            <h1>{{ product }}</h1>
+            <p>{{ description }}</p>
+        </div>
+    </div>
+    <div class="moreProducts">
+        <a :href="link">Больше подобных товаров</a>
+    </div>
 </div>
 </body>
 </html>
