--- a/index.html
+++ b/index.html
@@ -21,21 +21,27 @@
         </div>
         <div class="product-info">
             <div class="product-title">
-                <h1>{{ product }}</h1>
-                <span v-if="onSale">Товар со скидкой</span>
+                <h1>{{ title }}</h1>
+                <p class="infoSale">{{ sale }}</p>
             </div>
-            <p>{{ description }}</p>
+            <div class="description">
+                <h2>Описание:</h2>
+                <p>{{ description }}</p>
+            </div>
             <p v-if="inStock">(Товар есть на складе)</p>
             <p v-else>(Товара нет на складе)</p>
-            <ul>
-                <li v-for="detail in details">{{ detail }}</li>
-            </ul>
+            <div class="detail">
+                <h2>Характеристики:</h2>
+                <ul>
+                    <li v-for="detail in details">{{ detail }}</li>
+                </ul>
+            </div>
             <div
                     class="color-box"
-                    v-for="variant in variants"
+                    v-for="(variant, index) in variants"
                     :key="variant.variantId"
                     :style="{ backgroundColor:variant.variantColor }"
-                    @mouseover="updateProduct(variant.variantImage)">
+                    @mouseover="updateProduct(index)">
             </div>
             <div class="product-sizes">
                 <div class="size" v-for="size in sizes">{{ size }}</div>
