--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>Корзина: {{ cart.length }}</p>
     </div>
     <product :premium="premium" @add-to-cart="updateCart" @delete-from-cart="deleteCart"></product>
+<!--    <product-review @review-submitted="addReview"></product-review>-->
 </div>
 </body>
 </html>
